[OSX] AVKit is not available on all systems https://bugs.webkit.org/show_bug.cgi?id=156724 <rdar://problem/25501587>

Reviewed by Dean Jackson.

* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm: Add _OPTIONAL to all
  AVKit softlink macros.
* platform/ios/WebAVPlayerController.mm: Ditto.
* platform/ios/WebPlaybackSessionInterfaceAVKit.mm: Ditto.
* platform/ios/WebVideoFullscreenInterfaceAVKit.mm: Ditto.
* platform/mac/WebPlaybackSessionInterfaceMac.mm: Ditto.
* platform/mac/WebVideoFullscreenInterfaceMac.mm: Ditto.


Canonical link: https://commits.webkit.org/174836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199701 268f45cc-cd09-0410-ab3c-d52691b4dbfc